// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots z|b2c/PaymentSuccessScreen Booking 1`] = `
Array [
  <Text
    style={
      Object {
        "display": "none",
      }
    }
    testID="storyConfigId"
  >
    {"isCaptureScrollViewContent":true}
  </Text>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="captureButton"
  >
    <Text>
      Capture
    </Text>
    <Text
      style={
        Object {
          "display": "none",
        }
      }
      testID="captureURL"
    />
  </View>,
  <RCTScrollView
    testID="captureScrollView"
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "backgroundColor": "#F9FAFB",
                "flex": 1,
              },
              undefined,
              Object {},
            ]
          }
        >
          <RCTScrollView
            alwaysBounceVertical={false}
            automaticallyAdjustContentInsets={false}
            contentContainerStyle={
              Array [
                Object {
                  "flexGrow": 1,
                },
                Object {
                  "backgroundColor": "#F9FAFB",
                  "padding": 16,
                },
              ]
            }
            contentInset={
              Object {
                "bottom": 0,
              }
            }
            enableAutomaticScroll={true}
            enableOnAndroid={true}
            enableResetScrollToCoords={false}
            extraHeight={75}
            extraScrollHeight={0}
            getScrollResponder={[Function]}
            handleOnScroll={[Function]}
            horizontal={false}
            innerRef={[Function]}
            keyboardDismissMode="interactive"
            keyboardOpeningTime={250}
            keyboardShouldPersistTaps="handled"
            keyboardSpace={0}
            onScroll={[Function]}
            pointerEvents="auto"
            resetKeyboardSpace={[Function]}
            scrollEnabled={true}
            scrollEventThrottle={1}
            scrollForExtraHeightOnAndroid={[Function]}
            scrollIntoView={[Function]}
            scrollToEnd={[Function]}
            scrollToFocusedInput={[Function]}
            scrollToPosition={[Function]}
            showsVerticalScrollIndicator={true}
            update={[Function]}
            viewIsInsideTabBar={false}
          >
            <View>
              <View
                style={
                  Object {
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginTop": 30,
                    "paddingBottom": 8,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/assets/images/image_success_booking.png",
                    }
                  }
                  style={
                    Object {
                      "alignSelf": "center",
                      "marginVertical": 24,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FD1D1D",
                      "borderColor": "#FFFFFF",
                      "borderRadius": 40,
                      "borderWidth": 2,
                      "height": 80,
                      "justifyContent": "center",
                      "left": 319,
                      "position": "absolute",
                      "top": 60,
                      "width": 80,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 11,
                        "includeFontPadding": true,
                        "marginTop": 16,
                      }
                    }
                  >
                    Ưu tiên
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Nunito-Bold",
                        "fontSize": 30,
                        "includeFontPadding": true,
                      }
                    }
                  >
                    1
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 24,
                      "includeFontPadding": true,
                      "marginBottom": 16,
                      "textAlign": "center",
                    }
                  }
                >
                  Đặt chỗ thành công
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#333333",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 15,
                      "includeFontPadding": true,
                      "paddingBottom": 16,
                      "textAlign": "center",
                    }
                  }
                >
                  Tóm tắt thông tin đặt chỗ
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 4,
                      "justifyContent": "center",
                      "paddingVertical": 11,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#E53030",
                      }
                    }
                  >
                    Mã đặt chỗ
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#E53030",
                        "fontFamily": "Nunito-Bold",
                        "includeFontPadding": true,
                        "marginTop": 4,
                      }
                    }
                  >
                    #MDA00041A001DE124
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#E5E5E5",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "marginTop": 8,
                      "paddingVertical": 11,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#828282",
                            "fontFamily": "Nunito-Regular",
                            "fontSize": 15,
                            "includeFontPadding": true,
                            "textAlign": "center",
                          }
                        }
                      >
                        Tên dự án:
                      </Text>
                      <Text
                        style={
                          Object {
                            "color": "#333333",
                            "fontFamily": "Nunito-Bold",
                            "fontSize": 15,
                            "includeFontPadding": true,
                            "textAlign": "center",
                          }
                        }
                      >
                        test test
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                      },
                      Object {
                        "paddingTop": 8,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#E4E4E4",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 3,
                        "justifyContent": "center",
                        "paddingVertical": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#8B99A5",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 13,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Mã sản phẩm
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontFamily": "Nunito-Bold",
                          "fontSize": 15,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      A001
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#E4E4E4",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 2,
                        "justifyContent": "center",
                        "marginLeft": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#8B99A5",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 13,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Tầng
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontFamily": "Nunito-Bold",
                          "fontSize": 15,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      1
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#E4E4E4",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 2,
                        "justifyContent": "center",
                        "marginLeft": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#8B99A5",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 13,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Tháp
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontFamily": "Nunito-Bold",
                          "fontSize": 15,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Tiểu khu 1
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </RCTSafeAreaView>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "padding": 16,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={false}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderColor": "#26894F",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "height": 45,
                  "justifyContent": "center",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#26894F",
                    "fontFamily": "Nunito-Bold",
                    "fontSize": 14,
                    "includeFontPadding": true,
                  }
                }
              >
                Tiếp tục mua
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#26894F",
                "borderRadius": 4,
                "flex": 1,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "marginLeft": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Nunito-Bold",
                    "fontSize": 16,
                    "includeFontPadding": true,
                    "marginHorizontal": 8,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Nunito-Bold",
                    "fontSize": 14,
                    "includeFontPadding": true,
                  },
                ]
              }
            >
              Chi tiết giao dịch
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`Storyshots z|b2c/PaymentSuccessScreen Deposit 1`] = `
Array [
  <Text
    style={
      Object {
        "display": "none",
      }
    }
    testID="storyConfigId"
  >
    {"isCaptureScrollViewContent":true}
  </Text>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="captureButton"
  >
    <Text>
      Capture
    </Text>
    <Text
      style={
        Object {
          "display": "none",
        }
      }
      testID="captureURL"
    />
  </View>,
  <RCTScrollView
    testID="captureScrollView"
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "backgroundColor": "#F9FAFB",
                "flex": 1,
              },
              undefined,
              Object {},
            ]
          }
        >
          <RCTScrollView
            alwaysBounceVertical={false}
            automaticallyAdjustContentInsets={false}
            contentContainerStyle={
              Array [
                Object {
                  "flexGrow": 1,
                },
                Object {
                  "backgroundColor": "#F9FAFB",
                  "padding": 16,
                },
              ]
            }
            contentInset={
              Object {
                "bottom": 0,
              }
            }
            enableAutomaticScroll={true}
            enableOnAndroid={true}
            enableResetScrollToCoords={false}
            extraHeight={75}
            extraScrollHeight={0}
            getScrollResponder={[Function]}
            handleOnScroll={[Function]}
            horizontal={false}
            innerRef={[Function]}
            keyboardDismissMode="interactive"
            keyboardOpeningTime={250}
            keyboardShouldPersistTaps="handled"
            keyboardSpace={0}
            onScroll={[Function]}
            pointerEvents="auto"
            resetKeyboardSpace={[Function]}
            scrollEnabled={true}
            scrollEventThrottle={1}
            scrollForExtraHeightOnAndroid={[Function]}
            scrollIntoView={[Function]}
            scrollToEnd={[Function]}
            scrollToFocusedInput={[Function]}
            scrollToPosition={[Function]}
            showsVerticalScrollIndicator={true}
            update={[Function]}
            viewIsInsideTabBar={false}
          >
            <View>
              <View
                style={
                  Object {
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginTop": 30,
                    "paddingBottom": 8,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/assets/images/ic_success_fill.png",
                    }
                  }
                  style={
                    Object {
                      "alignSelf": "center",
                      "marginVertical": 24,
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 24,
                      "includeFontPadding": true,
                      "marginBottom": 16,
                      "textAlign": "center",
                    }
                  }
                >
                  Xác nhận quyền tham gia đặt cọc thành công
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#333333",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 15,
                      "includeFontPadding": true,
                      "paddingBottom": 16,
                      "textAlign": "center",
                    }
                  }
                >
                  Tóm tắt thông tin
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#CCD1D9",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Image
                    resizeMode="contain"
                    source={
                      Object {
                        "uri": "",
                      }
                    }
                    style={
                      Object {
                        "borderRadius": 24,
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 16,
                        "includeFontPadding": true,
                        "marginVertical": 4,
                      }
                    }
                  >
                    Chuyên viên tư vấn
                  </Text>
                  <Text
                    style={
                      Object {
                        "fontFamily": "Nunito-Bold",
                        "fontSize": 16,
                        "includeFontPadding": true,
                      }
                    }
                  >
                    Thinh nguyen
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#E5E5E5",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "marginTop": 8,
                      "paddingVertical": 11,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#828282",
                            "fontFamily": "Nunito-Regular",
                            "fontSize": 15,
                            "includeFontPadding": true,
                            "textAlign": "center",
                          }
                        }
                      >
                        Tên dự án:
                      </Text>
                      <Text
                        style={
                          Object {
                            "color": "#333333",
                            "fontFamily": "Nunito-Bold",
                            "fontSize": 15,
                            "includeFontPadding": true,
                            "textAlign": "center",
                          }
                        }
                      >
                        test test
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                      },
                      Object {
                        "paddingTop": 8,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#E4E4E4",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 3,
                        "justifyContent": "center",
                        "paddingVertical": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#8B99A5",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 13,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Mã sản phẩm
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontFamily": "Nunito-Bold",
                          "fontSize": 15,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      A001
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#E4E4E4",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 2,
                        "justifyContent": "center",
                        "marginLeft": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#8B99A5",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 13,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Tầng
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontFamily": "Nunito-Bold",
                          "fontSize": 15,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      1
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#E4E4E4",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 2,
                        "justifyContent": "center",
                        "marginLeft": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#8B99A5",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 13,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Tháp
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontFamily": "Nunito-Bold",
                          "fontSize": 15,
                          "includeFontPadding": true,
                          "padding": 4,
                        }
                      }
                    >
                      Tiểu khu 1
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </RCTSafeAreaView>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "padding": 16,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={false}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderColor": "#26894F",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "height": 45,
                  "justifyContent": "center",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#26894F",
                    "fontFamily": "Nunito-Bold",
                    "fontSize": 14,
                    "includeFontPadding": true,
                  }
                }
              >
                Tiếp tục mua
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#26894F",
                "borderRadius": 4,
                "flex": 1,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "marginLeft": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Nunito-Bold",
                    "fontSize": 16,
                    "includeFontPadding": true,
                    "marginHorizontal": 8,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Nunito-Bold",
                    "fontSize": 14,
                    "includeFontPadding": true,
                  },
                ]
              }
            >
              Chi tiết giao dịch
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;
